syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message CreateOrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message OrderResponse {
 string id = 1;
 float price = 2;
 float tax = 3;
 float final_price = 4;
}

message ListOrdersResponse {
  repeated OrderResponse orders = 1;
}

message Empty {}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc ListOrders(Empty) returns (ListOrdersResponse);
}